Update contact information

--- a/index.html
+++ b/index.html
@@ -238,16 +238,16 @@
             <ul class="list-unstyled">
                 <li>
                     <img src="assets/images/email.png" alt="Email" width="24">
-                    <a href="mailto:johndoe@example.com">johndoe@example.com</a>
+                    <a href="mailto:marlonmarcon@utfpr.edu.br">johndoe@example.com</a>
                 </li>
                 <li>
                     <img src="assets/images/linkedin.png" alt="LinkedIn" width="24">
-                    <a href="https://linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a>
+                    <a href="https://www.linkedin.com/in/marlon-marcon/" target="_blank">linkedin.com/in/johndoe</a>
                 </li>
-                <li>
+                <!-- <li>
                     <img src="assets/images/github.png" alt="GitHub" width="24">
                     <a href="https://github.com/johndoe" target="_blank">github.com/johndoe</a>
-                </li>
+                </li> -->
             </ul>
         </section>
     </main>
