--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
             <ul class="list-unstyled">
                 <li>
                     <img src="assets/images/email.png" alt="Email" width="24">
-                    <a href="mailto:marlonmarcon@utfpr.edu.br">johndoe@example.com</a>
+                    <a href="mailto:marlonmarcon@utfpr.edu.br">marlonmarcon@utfpr.edu.br</a>
                 </li>
                 <li>
                     <img src="assets/images/linkedin.png" alt="LinkedIn" width="24">
-                    <a href="https://www.linkedin.com/in/marlon-marcon/" target="_blank">linkedin.com/in/johndoe</a>
+                    <a href="https://www.linkedin.com/in/marlon-marcon/" target="_blank">linkedin.com/in/marlon-marcon</a>
                 </li>
                 <!-- <li>
                     <img src="assets/images/github.png" alt="GitHub" width="24">
